@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class RegisterCollaboratorUI
{

}

class RegisterCollaboratorController
{
    + RegisterCollaboratorController()
    + getJobs()
    + registerCollaborator(name, birthdate,\nadmissionDate, address, phoneNumber,\nemail, taxpayerNumber, identificationDocumentType,\nidentificationDocumentNumber, jobName)
    - getJobByName(jobName)
}

class Repositories
{
    - Repositories()
    + getInstance() : Repositories
    + getJobRepository()
    + getCollaboratorRepository()
}

class JobRepository
{
    + getJobs()
    + getJobByName(jobName)
}

class CollaboratorRepository
{
    + registerCollaborator(name, birthdate,\nadmissionDate, address, phoneNumber,\nemail, taxpayerNumber, identificationDocumentType,\nidentificationDocumentNumber, job)
    - addCollaborator(collaborator)
    - validateCollaborator(collaborator)
}

class Collaborator
{
    - String name
    - Calendar birthdate
    - Calendar admissionDate
    - String address
    - Integer phoneNumber
    - String email
    - Integer taxpayerNumber
    - String identificationDocumentNumber
    + Collaborator(name, birthdate,\nadmissionDate, address, phoneNumber,\nemail, taxpayerNumber, identificationDocumentType,\nidentificationDocumentNumber, job)
}

enum DocType
{
    CC
    BI
    Passport
}

class Job
{
    - String name
}

Collaborator +-- DocType

Repositories -> Repositories : instance

RegisterCollaboratorUI .> RegisterCollaboratorController

RegisterCollaboratorController .> Repositories : repostories
RegisterCollaboratorController ..> JobRepository : jobRepository
RegisterCollaboratorController ..> CollaboratorRepository : collaboratorRepository

Repositories --> "1" JobRepository
Repositories ---> "1" CollaboratorRepository

JobRepository "1" -> "*" Job : job
CollaboratorRepository "1" -> "*" Collaborator : collaborator

Collaborator "*" -> "1" Job : has


@enduml